# libre-cv

./: ARCHITECTURE_OVERVIEW.md  BACKLOG.md  CONTEXT_MAP.md  Cargo.toml  DOMAIN_VISION.md  EVENT_STORM_OUTPUT.md  UBIQUITOUS_LANGUAGE.md
.github/workflows/: ci.yml
docs/market/competitors/: README.md  aihawk.md  careery.md  flowcv.md  jack_and_jill_ai.md  jobright.md  json_resume.md  linkedin.md  maayu.md  open_resume.md  peerlist.md  polywork.md  reactive_resume.md
features/: configure-digital-twin.feature  draft-professional-identity.feature  manage-expectations.feature  manage-experience.feature  manage-headline-and-summary.feature  manage-projects.feature  manage-skills.feature  publish-professional-identity.feature  track-sessions.feature
src/domain/: mod.rs
src/domain/digital_twin/: aggregate.rs  error.rs  mod.rs
src/domain/digital_twin/value_objects/: digital_twin_id.rs  mod.rs  tone.rs
src/domain/professional_identity/: aggregate.rs  details.rs  error.rs  expectations.rs  experiences.rs  mod.rs  projects.rs  skills.rs  value_objects.rs
src/domain/professional_identity/entities/: expectation.rs  experience.rs  mod.rs  project.rs  skill.rs
src/domain/professional_identity/value_objects/: detail.rs  detail_id.rs  expectation_id.rs  expectation_kind.rs  experience_id.rs  mod.rs  name.rs  (+7 more)
tests/: cucumber.rs
tests/steps/: configure_digital_twin.rs  draft_professional_identity.rs  manage_expectations.rs  manage_experience.rs  manage_headline_and_summary.rs  manage_projects.rs  manage_skills.rs  mod.rs  publish_professional_identity.rs  track_sessions.rs
