[package]
name = "libre-cv"
version = "0.1.0"
edition = "2024"

[dependencies]
jiff = "0.2"
snafu = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
cucumber = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "cucumber"
harness = false
